--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body{
     background-image: url(image.jpg);
+    margin: 0;
+    padding-bottom: 60px;
     
     
 }
@@ -16,4 +18,25 @@ nav a {
     margin: 0 15px; 
     font-weight: bold; 
     float: right; 
+}
+
+footer {
+    position:fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: beige;
+    color: black;
+    text-align: center;
+    padding: 0.5rem 0;
+    font-size: o.8rem;
+    
+}
+footer a {
+    color: black;
+    text-decoration: none;
+}
+footer a:hover {
+    text-decoration: underline;
+   
 }
