--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
-html, body {
+html, body  {
     height: 100%; 
     margin: 0;
+    
+    
 }
 
 body {
@@ -29,41 +31,66 @@ body {
     float: right; 
 }
 
-.prod {
+.prod,.para2,.para3{
     background-color: beige;
-    
-    padding: 10px;
+    padding: 20px;
     width: 300px;
-   
-   
-
     text-align: center;
     text-decoration: dotted;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-radius: 10px;
     justify-content: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+   
+
 }
 
-.prod img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-}
 
-.prod ul {
+.prod,.para2,.para3, ul {
     list-style:disc;
     padding: 0; 
 }
 
-.prod li {
-    margin: 10px 10px;
+.prod ,.para2,.para3, li {
+    margin: 10px 50px;
 }
+.paragraphe{
+    display: flex;
+    align-items: center;
+    justify-content: cz;
+}
+.tableau {
+    background-color: white;
+    padding:10px;
+    margin-top: 20px;
+
+}
+.tableau h2{
+    text-align: center;
+    color: black;
+}
+.tableau table{
+    width: 100%;
+}
+.tableau th,td {
+    background-color: rgba(217, 124, 11, 0.317);
+    padding: 10px;
+    text-align: left;
+    color: white;
+}
+
+
 
 
 .container {
     flex: 1; 
     display: flex;
     flex-direction: column; 
+    flex-wrap: wrap;
+    gap: 20px;
+   
 }
+
 
 footer {
     background-color: #dab39455;
