--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,9 @@ body {
     margin: 10px 50px;
 }
 .paragraphe{
-    display: flex;
+    display:flex;
     align-items: center;
-    justify-content: cz;
+   
 }
 
 
@@ -199,7 +199,7 @@ button {
   label {
     margin-bottom: 1px;}
 
-    .tableau {
+ .tableau {
         background-color: white;
         padding:10px;
         margin-top: 20px;
@@ -218,7 +218,32 @@ button {
         text-align: left;
         color: white;
     }
-    
+/* Cacher le bouton radio par défaut */
+input[type="radio"] {
+    display: none; /* Cacher le bouton radio par défaut */
+}
+
+/* Style du label associé au bouton radio */
+label {
+    display: inline-block;
+    padding: 10px 15px;
+    margin: 5px;
+    border: 2px solid #ccc; /* Bordure par défaut */
+    border-radius: 5px; /* Coins arrondis */
+    cursor: pointer; /* Curseur en forme de main */
+    transition: background-color 0.3s, border-color 0.3s; /* Transition douce */
+}
+
+/* Style lorsque le bouton radio est sélectionné */
+input[type="radio"]:checked + label {
+    background-color: #f0f0f0; /* Couleur de fond pour le bouton sélectionné */
+    border-color: #007bff; /* Couleur de bordure pour le bouton sélectionné */
+}
+
+/* Style au survol du label */
+label:hover {
+    background-color: #e0e0e0; /* Couleur de fond au survol */
+}
  
 
 footer {
